<resources>
    <string name="app_name">pdxBranch</string>
    <string name="background">textured background</string>
    <string name="collaboration">collaboration symbol</string>
    <string name="subtitle">A Hub for Collaboration</string>
    <string name="new_user">New to pdxBranch? <b><u>Sign up</u></b> and start collaborating!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Account Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="screen_name">Screen Name</string>
    <string name="avatar">Profile image URL</string>
    <string name="zip_code">Zip Code</string>
    <string name="thinking">Thinking Icon</string>
    <string name="post">Post</string>
    <string name="post_hint">What are you thinking?</string>
    <string name="greeting">Welcome to pdxBranch</string>
    <string name="action_profile">Profile</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_groups">Groups</string>
    <string name="group_name">Tech Academy Portland Meetup</string>
    <string name="member_num">500 members</string>
    <string name="join_on_meetup">Join on Meetup</string>
    <string name="group_description">This is a group for anyone interested in software development and web development. The Tech Academy is a code school located in downtown Portland. We train students in computer programming. Come join us to hear words of wisdom from experienced professionals in the IT field, as well as successes from recent graduates who have broken into the software development industry. Anyone welcome. Join us for snacks and a good time.</string>
    <string name="returning_user">Returning Member?</string>
    <string name="returning_user_subtitle">Welcome back, we\'ve missed you.</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="no_results">Sorry, no results for that search. \nTry searching for other key words.</string>
    <string name="action_search">Search</string>
    <string name="user_name">User Name</string>
    <string name="content">Content</string>
    <string name="timestamp">Timestamp</string>
    <string name="user_profile_image">user profile image</string>
    <string name="full_name">Full Name</string>
    <string name="add_friend">add friend icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visit_on_meetup">Visit on Meetup</string>
    <string name="meetup_group_image">meetup group image</string>
    <string name="organized_by_person">Organized by person</string>
    <string name="screenname">(screenName)</string>
    <string name="pdxBranch_logo">pdxBranch logo</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
</resources>
