<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateProfileActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/background"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up_title"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameEditText"
        android:hint="@string/last_name"
        android:inputType="text"
        android:background="@color/colorWhite"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/firstNameEditText"
        android:layout_alignStart="@+id/firstNameEditText"
        android:layout_alignRight="@+id/firstNameEditText"
        android:layout_alignEnd="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/screenNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameEditText"
        android:hint="@string/screen_name"
        android:inputType="text"
        android:background="@color/colorWhite"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/lastNameEditText"
        android:layout_alignStart="@+id/lastNameEditText"
        android:layout_alignRight="@+id/lastNameEditText"
        android:layout_alignEnd="@+id/lastNameEditText" />

    <EditText
        android:id="@+id/zipCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screenNameEditText"
        android:hint="@string/zip_code"
        android:inputType="number"
        android:background="@color/colorWhite"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/screenNameEditText"
        android:layout_alignStart="@+id/screenNameEditText"
        android:layout_alignRight="@+id/screenNameEditText"
        android:layout_alignEnd="@+id/screenNameEditText" />

    <EditText
        android:id="@+id/profileImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zipCodeEditText"
        android:hint="@string/avatar"
        android:inputType="text"
        android:background="@color/colorWhite"
        android:padding="5dp"
        android:layout_alignLeft="@+id/zipCodeEditText"
        android:layout_alignStart="@+id/zipCodeEditText"
        android:layout_alignRight="@+id/zipCodeEditText"
        android:layout_alignEnd="@+id/zipCodeEditText" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/profileImageUrl"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/profileImageUrl"
        android:layout_alignStart="@+id/profileImageUrl"
        android:layout_alignRight="@+id/profileImageUrl"
        android:layout_alignEnd="@+id/profileImageUrl" />

</RelativeLayout>
