<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.epicodus.pdxbranch.ui.CreateAccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signUpTextView"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:background="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditText"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/emailEditText"
        android:layout_alignStart="@+id/emailEditText"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText"
        android:padding="5dp"
        android:background="@color/colorWhite"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:padding="5dp"
        android:background="@color/colorWhite"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordEditText"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/confirmPasswordEditText"
        android:layout_alignStart="@+id/confirmPasswordEditText"
        android:layout_alignRight="@+id/confirmPasswordEditText"
        android:layout_alignEnd="@+id/confirmPasswordEditText"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:text="@string/submit" />

</RelativeLayout>
